--- a/style.css
+++ b/style.css
@@ -37,13 +37,12 @@ nav{
 .nav-p2 h5 span{
   font-size: 0.94vw;
   font-weight: 400;
-  /* transform: translate(25px); */
+  /* transform: translateX(-7vw); */
   display: inline-block;
 }
 .nav-p2 h5{
   margin-bottom: 1vw;
   display: none;
-  /* background: red; */
   overflow: hidden;
 }
 .nav-bottom{
@@ -112,6 +111,7 @@ nav .button:hover .button-layer{
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  position: relative;
 }
 .page1 h1{
   font-size: 8.5vw;
@@ -193,6 +193,448 @@ nav .button:hover .button-layer{
 }
 
 .page2{
+  height: 100vh;
+  width: 100%;
+  background: #111;
+  position: relative;
+  padding: 0vw 10.5vw;
+  padding-bottom: 8vw;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-top: 1px solid #333;
+}
+.page2-left{
+  height: 100%;
+  width: 40%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  flex-direction: column;
+  padding: 3vw 0;
+}
+.page2-left p{
+  font-size: 0.8vw;
+}
+.page2-left h5{
+  font-size: 1.3vw;
+  width: 75%;
+  font-weight: 400;
+}
+.page2-right{
+  height: 100%;
+  width: 50%;
+}
+.right-elem{
+  position: relative;
+  height: 20vh;
+  padding-top: 2vw;
+  padding-bottom: 6vw;
+  border-bottom: 1px solid #333;
+}
+.right-elem h2{
+  font-size: 1.4vw;
+  font-weight: 400;
+}
+.right-elem img{
+  height: 7vw;
+  width: 7vw;
+  border-radius: 50%;
+  object-fit: cover;
+  position: absolute;
+  opacity: 0;
+  scale: 0;
+}
+
+.page3{
+  height: 100vh;
+  width: 100%;
+  background: #111;
+  background-image: url(https://lazarev.kiev.ua/la24/reel-cover.webp);
+  background-size: cover;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.page3-center{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding: 1vw;
+}
+.page3-center .icon i{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 3.3vw;
+  border-radius: 50%;
+  background: #fff;
+  font-size: 3vw;
+  color: #000;
+}
+.page3-center h5{
+  font-size: 1vw;
+  padding: 10px 20px;
+  text-transform: uppercase;
+  background: #fff;
+  color: #000;
+  border-radius: 50px;
+  font-weight: 700;
+  opacity: 0;
+  transition: all ease 0.5s;
+  margin-top: 1vw;
+  transform: translateY(10%);
+}
+.page3-center:hover h5{
+  opacity: 1;
+  transform: translateY(0);
+}
+.page3 video{
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  object-fit: cover;
+  transform: scaleX(0.7) scaleY(0);
+  border-radius: 30px;
+  opacity: 0;
+  z-index: 99;
+}
+
+.page4{
+  min-height: 100vh;
+  width: 100%;
+  background: #fff;
+  position: relative;
+  padding-bottom: 13vh;
+}
+.section{
+  width: 100%;
+  height: 72vh;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 13vh 10vw;
+  padding-bottom: 0;
+}
+.sec-left{
+  height: 60vh;
+  width: 25%;
+  border-top: 2px solid #000;
+  padding-top: 3vh;
+}
+.sec-left h2{
+  font-size: 2vw;
+  font-weight: 500;
+  color: #000;
+}
+.sec-left p{
+  color: #000;
+  margin-top: 5vw;
+  font-size: 1.3vw;
+
+}
+.sec-right{
+  height: 60vh;
+  width: 70%;
+  background: aqua;
+  position: relative;
+}
+.sec-right img{
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+.sec-right video{
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  object-fit: cover;
+  opacity: 0;
+  transition: opacity ease 0.3s;
+}
+
+.page5{
+  min-height: 100vh;
+  width: 100%;
+  background: #111;
+  position: relative;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  padding: 5vh 10.5vw;
+}
+.page5 button{
+  background: #0DA34E;
+  padding: 1vw 2vw;
+  font-size: 1vw;
+  font-weight: 600;
+  border-radius: 50px;
+  border: none;
+  position: sticky;
+  top: 15%;
+}
+.page5-right{
+  width: 70%;
+
+}
+.page5-right>p{
+  font-size: 2.1vw;
+}
+.page5-right>p span{
+  background: red;
+  width: 15vw;
+  display: inline-block;
+}
+.page5-content{
+  width: 100%;
+  margin-top: 5vh;
+  padding: 5vh 0;
+  
+}
+.page5-content>h1{
+  font-size: 3vw;
+}
+.page5-content .flex{
+  display: flex;
+  margin-top: 4vh;
+  margin-bottom: 4vh;
+}
+.page5-content .flex h4{
+  border-radius: 50px;
+  border: 1px solid #fff;
+  padding: 10px 20px;
+  font-weight: 400;
+  font-size: 0.8vw;
+}
+.page5-elem{
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  padding-top: 3vh;
+  padding-bottom: 9vh;
+  position: relative;
+  overflow: hidden;
+  border-top: 1px solid #333;
+  transition: all cubic-bezier(0.19, 1, 0.22, 1) 0.5s;
+}
+.page5-elem p{
+  width: 55%;
+  font-size: 0.8vw;
+  position: relative;
+  z-index: 8;
+}
+.page5-elem h3{
+  font-size: 1.5vw;
+  font-weight: 400;
+  position: relative;
+  z-index: 8;
+}
+.page5-elem i{
+  font-size: 1vw;
+  position: relative;
+  z-index: 8;
+}
+.over{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: #222;
+  top: 0;
+  transform: translateY(-100%);
+  opacity: 0;
+  transition: all cubic-bezier(0.19, 1, 0.22, 1) 0.5s;
+}
+.page5-elem:hover h3{
+  padding-left: 1vw;
+  transition: all cubic-bezier(0.19, 1, 0.22, 1) 0.5s;
+}
+.page5-elem:hover i{
+  padding-right: 1vw;
+  transition: all cubic-bezier(0.19, 1, 0.22, 1) 0.5s;
+}
+.page5-elem:hover .over{
+  transform: translateY(0);
+  opacity: 1;
+}
+.page5-elem:hover{
+  border-top: 2px solid #fff;
+}
+summary::marker{
+  content: '';
+}
+.UIUX{
+  border-top: 1px solid #333;
+  padding: 3vh 0;
+  position: relative;
+}
+.products{
+  border-top: 1px solid #333;
+  padding: 3vh 0;
+  position: relative;
+}
+.arrow{
+  position: absolute;
+  top: 1vw;
+  right: 1vw;
+}
+.arrow i{
+  font-size: 1vw;
+  transition: all ease 0.3s;
+}
+
+.page6{
+  min-height: 100vh;
+  width: 100%;
+  background: #fff;
+  padding: 10vh 10vw;
+}
+.page6>h1{
+  font-size: 5.5vw;
+  color: #000;
+  padding-left: 23vw;
+  padding-right: 8vw;
+  line-height: 5.8vw;
+  padding-bottom: 10vh;
+  border-bottom: 1px solid #a19f9f;
+}
+.page6-content{
+  color: #000;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  padding-top: 3vw;
+}
+.page6-content .right-6{
+  width: 70%;
+}
+.page6-content .right-6 p{
+  font-size: 1.5vw;
+  color: #000;
+  margin-bottom: 5vh;
+  width: 80%;
+}
+.blue-btn{
+  background: #4f5bff;
+  width: 15vw;
+  height: 3.5vw;
+  border-radius: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.blue-btn h4{
+  position:absolute;
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 0.85vw;
+}
+.blue-btn h4 i{
+  font-size: 1.1vw;
+  font-weight: 100;
+  margin-left: 1vw;
+}
+.page6-bottom{
+  height: 40vh;
+  width: 100%;
+  border-top: 1px solid #a19f9f;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+}
+.btm6-part1{
+  border-right: 1px solid #a19f9f;
+  width: 30%;
+  height: 100%;
+}
+.btm6-part2{
+  border-right: 1px solid #a19f9f;
+  width: 28%;
+  height: 100%;
+}
+.btm6-part3{
+  border-right: 1px solid #a19f9f;
+  width: 15%;
+  height: 100%;
+}
+.btm6-part4{
+  border-right: 1px solid #a19f9f;
+  width: 15%;
+  height: 100%;
+}
+.btm6-part5{
+  width: 15%;
+  height: 100%;
+}
+.btm6-parts{
+  padding: 4vh 0.6vw;
+
+}
+.btm6-parts h5{
+  color: #000;
+  font-weight: 900;
+  font-size: 1vw;
+  margin-bottom: 5vh;
+}
+.btm6-parts h4{
+  background: #111;
+  width: 90%;
+  padding: 5px 10px;
+  border-radius: 50px;
+  font-size: 0.85vw;
+  font-weight: 500;
+  display: flex;
+  align-items: center;
+  margin-bottom: 0.3vh;
+}
+.btm6-parts h4 span{
+  background: #333;
+  padding: 0.5vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 1.5vw;
+  height: 2vw;
+  border-radius: 50%;
+  margin-right: 1vw;
+}
+.btm6-part2 h4:nth-child(2){
+  transform: translate(0);
+}
+.btm6-part2 h4:nth-child(3){
+  transform: translate(10%);
+}
+.btm6-part2 h4:nth-child(4){
+  transform: translate(20%);
+}
+.btm6-part2 h4:nth-child(5){
+  transform: translate(30%);
+}
+.btm6-part2 h4:nth-child(6){
+  transform: translate(40%);
+}
+.btm6-part2 h4:nth-child(7){
+  transform: translate(50%);
+}
+.btm6-part3 h4:nth-child(2){
+  transform: translate(0);
+}
+.btm6-part3 h4:nth-child(3){
+  transform: translate(30%);
+}
+.btm6-part4 h4:nth-child(2){
+  transform: translate(0);
+}
+.btm6-part4 h4:nth-child(3){
+  transform: translate(30%);
+}
+.btm6-part4 h4:nth-child(4){
+  transform: translate(50%);
+}
+
+.page7{
   height: 100vh;
   width: 100%;
   background: #111;
